<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".List_account">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="50dp"
                android:text="@string/view_account"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/OnlineOffline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="50dp"
                android:text="@string/online"
                android:textColor="@color/green"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/display_account"
                android:layout_width="351dp"
                android:layout_height="480dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="25dp"
                android:text="@string/text" />

            <Button
                android:id="@+id/return_button"
                android:layout_width="161dp"
                android:layout_height="59dp"
                android:layout_marginStart="125dp"
                android:layout_marginLeft="125dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="75dp"
                android:onClick="OnClickReturn"
                android:text="@string/return1" />

            <Button
                android:id="@+id/refresh_button"
                android:layout_width="161dp"
                android:layout_height="59dp"
                android:layout_marginBottom="75dp"
                android:onClick="OnClickRefresh"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="125dp"
                android:text="@string/refresh" />

            <Button
                android:id="@+id/delete_data"
                android:layout_width="161dp"
                android:layout_height="59dp"
                android:layout_marginLeft="125dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="75dp"
                android:backgroundTint="@color/red"
                android:onClick="Delete_data"
                android:text="@string/delete_data"
                android:textColor="@color/black" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>